# xarizmi

./: .gitignore  CLAUDE.md  README.md  alembic.ini  download.py  main.py  migration-guide.txt  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_lock.txt  setup.cfg  setup.py  tasks.py
.github/workflows/: ci.yml  publish.yml  python-package.yml
examples/: rebalance.py
tasks/: __init__.py  code.py  database.py
tests/: conftest.py  test_candlestick.py
tests/db/: conftest.py
tests/db/models/: test_actor.py  test_currency.py  test_exchange.py  test_order.py  test_portfolio.py  test_rebalance.py  test_symbol.py
tests/fundamentals/: test_fundamentals.py  test_irr.py  test_time_value_money.py  test_utils.py
tests/fundamentals/accounting/: test_balance_sheet_item.py  test_balance_sheet_main_group.py  test_balance_sheet_submain_group.py
tests/mctools/: test_candlestick.py
tests/models/: test_actors.py  test_currency.py  test_exchange.py  test_orders.py  test_portfolio.py  test_rebalance.py  test_symbol.py
tests/ta/: test_obv.py
tests/utils/: test_extremums.py  test_numbers.py
typings/mplfinance/: __init__.pyi
typings/talib/abstract/: __init__.pyi
typings/yfinance/: __init__.pyi
xarizmi/: candlestick.py  config.py  enums.py
xarizmi/db/: alembic.ini  client.py
xarizmi/db/actions/: exchange.py
xarizmi/db/actions/candlestick/: candlestick_read.py
xarizmi/db/actions/order/: __init__.py  read.py
xarizmi/db/actions/portfolio/: __init__.py
xarizmi/db/admin_tools/: __init__.py  export.py  load.py
xarizmi/db/alembic/: env.py
xarizmi/db/alembic/versions/: 0c92c803d35b_initial_migration.py  0f106fabd22f_add_more_fields.py  258ee56e7873_add_uniqueness_constraints_on_exchange.py  40610635cc37_add_order_model.py  4bcb140de81f_first_migrations.py  c0ebfb0eb6cc_add_actor_currency_portfolio_rebalance_.py  c63cb9ba06b2_add_portfolio_model.py  dfe454fc4858_fix_columns_type_buy_in_candlestick.py  e33464855650_update_interval_type.py  e726c627ded5_add_uniqueness_constraints.py
xarizmi/db/mappers/: base.py  symbol.py
xarizmi/db/models/: __init__.py  actor.py  candlestick.py  constants.py  currency.py  exchange.py  order.py  portfolio.py  rebalance.py  symbol.py
xarizmi/examples/: download_yahoo_finance_data.py  example_with_db.py
xarizmi/fundamentals/: cash_flow.py  fundamentals.py  irr.py  perpetuity.py  time_value_money.py
xarizmi/fundamentals/accounting/: balance_sheet_item.py  balance_sheet_item_objects.py  balance_sheet_item_tuple.py  balance_sheet_submain_group.py  exception.py  transaction.py
xarizmi/mctools/: candlestick.py
xarizmi/models/: __init__.py  actors.py  currency.py  exchange.py  orders.py  portfolio.py  rebalance.py  symbol.py
xarizmi/opendata/: yahoo_finance.py
xarizmi/ta/: obv.py
xarizmi/utils/: datetools.py  extremums.py
xarizmi/utils/plot/timeseries/: lineplot.py
